Fix sideways badge background clipping

--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -42,6 +42,15 @@ textarea {
     calc(var(--bs-list-group-item-padding-x) * -1);
   text-transform: uppercase !important;
 }
+
+.list-group-item:first-child .event-severity  {
+  border-bottom-right-radius: 5px !important;
+}
+
+.list-group-item:last-child .event-severity    {
+  border-top-right-radius: 5px !important;
+}
+
 #mdEditorTabs.nav-tabs .nav-link.active {
   border: var(--bs-card-border-width) solid var(--bs-card-border-color);
   border-bottom-color: white;
